// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveText general functionality should match snapshot 1`] = `
<Text
  onPress={[MockFunction]}
  style={
    {
      "color": "rgba(255, 255, 255, 0.66)",
      "fontSize": 28,
      "fontWeight": "regular",
      "marginBottom": undefined,
    }
  }
>
  prefix-test 
  <Text
    style={
      {
        "color": "#FFF",
        "textDecorationLine": "underline",
      }
    }
  >
    text-test
  </Text>
</Text>
`;

exports[`InteractiveText when color prop is given should match snapshot 1`] = `
<Text
  onPress={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    {
      "color": "rgba(255, 255, 255, 0.66)",
      "fontSize": 28,
      "fontWeight": "regular",
      "marginBottom": undefined,
    }
  }
>
  prefix-test 
  <Text
    style={
      {
        "color": "#000",
        "textDecorationLine": "underline",
      }
    }
  >
    text-test
  </Text>
</Text>
`;
